prusti/tests/verify/fail/with-spec/ensures-false.rs

#[ensures="false"]
fn main() { //~ ERROR
}
